fix: post merge fix
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>